# retico-core

./: .gitignore  .readthedocs.yaml  README.md  post_install.py  pyproject.toml  retico_deploy.sh  setup.cfg  setup.py  setup2.py
docs/: basics.md  conf.py  deploy.md  gettingstarted.md  index.rst  logs.md  retico_core.rst  tutorial.md
retico_core/: __init__.py  abstract.py  audio.py  await_contigent_iu.py  debug.py  dialogue.py  log_utils.py  network.py  robot.py  server.js  text.py  utils.py  version.py  visual.py
retico_core/core/: __init__.py  audio.py  debug.py  dialogue.py  text.py  visual.py
retico_core/huggingface/: README.md  asr.py  asr_cat.py  asr_deepspeech.py  setup.py
retico_core/interop/ros/catkin_ws/devel/: .catkin  .rosinstall
retico_core/interop/zeromq/: io.py
retico_core/modules/huggingface/: asr.py  asr_cat.py  asr_deepspeech.py
retico_core/modules/psi/: common.py  psiAsrReceiver.py
retico_core/modules/rasa/: nlu.py
retico_core/modules/sds_class/: TaggerModule.py  iu.py
retico_core/modules/slim/: common.py  words_as_classifiers.py
retico_core/psi/: README.md  configFileReader.py  psiAsrReceiver.py  psi_common.py  setup.py
retico_core/rasa/: README.md  retico_nlu.py  setup.py
retico_core/sds_class/: README.md  TaggerModule.py  sds_class_iu.py  setup.py
retico_core/slim/: README.md  setup.py  slim_common.py  wac.py  words_as_classifiers.py
tests/: README.md  abstract_test.py  audio_test.py  debug_test.py  dialog_test.py  mock_classes.py  network_test.py  text_test.py  visual_test.py
(+23 files in other folders)
